@@ -3,12 +3,9 @@ package ninjabrainbot.integrationtests;
 import java.util.Random;
 
 import ninjabrainbot.gui.mainwindow.eyethrows.EnderEyePanelTestAdapter;
-import ninjabrainbot.model.datastate.IDataState;
 import ninjabrainbot.util.TestUtils;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.RepeatedTest;
-import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
 
@@ -22,7 +19,7 @@ public class PreferencesIntegrationTests {
 	}
 
 	@ParameterizedTest
-	@ValueSource(floats = {0.1f, -0.231f, 1, -1, -0.001f, 0.014f})
+	@ValueSource(floats = { 0.1f, -0.231f, 1, -1, -0.001f, 0.014f })
 	void CrosshairCorrectionIntegrationTest(float crosshairCorrection) {
 		// Arrange
 		IntegrationTestBuilder integrationTestBuilder = new IntegrationTestBuilder();
@@ -33,7 +30,7 @@ public class PreferencesIntegrationTests {
 			horizontalAngle -= 360;
 		if (horizontalAngle < -180)
 			horizontalAngle += 360;
-		String f3c = "/execute in minecraft:overworld run tp @s 0 64 0 %s -31".formatted(horizontalAngle);
+		String f3c = String.format("/execute in minecraft:overworld run tp @s 0 64 0 %s -31", horizontalAngle);
 
 		// Act
 		integrationTestBuilder.setClipboard(f3c);
@@ -41,7 +38,7 @@ public class PreferencesIntegrationTests {
 		// Assert
 		TestUtils.awaitSwingEvents();
 		var experimentallyCorrectedHorizontalAngle = horizontalAngle - 0.00079 * Math.sin((horizontalAngle + 45) * Math.PI / 180.0);
-		Assertions.assertEquals(Math.round((horizontalAngle + crosshairCorrection) * 100f)/100f, enderEyePanelTestAdapter.getPanel(0).getAngle(), 1e-4);
+		Assertions.assertEquals(Math.round((horizontalAngle + crosshairCorrection) * 100f) / 100f, enderEyePanelTestAdapter.getPanel(0).getAngle(), 1e-4);
 		Assertions.assertEquals(experimentallyCorrectedHorizontalAngle + crosshairCorrection, integrationTestBuilder.dataState.getThrowList().get(0).horizontalAngle(), 1e-4);
 	}
 }
